api/gate: regenerate gate API from spinnaker 1.10.5
